--- a/main.css
+++ b/main.css
@@ -1,14 +1,18 @@
 #can{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position:absolute;
+    width:100%;
+    height:100%;
     top:0;
-    bottom: 0;
-    left: 0;
+    bottom:0;
+    left:0;
     right:0;
 }
 .btn{
     position:absolute;
     font-size:13pt;
     padding:0.8em;
+}
+
+body{
+    margin:0;
 }
