--- a/main.css
+++ b/main.css
@@ -26,14 +26,14 @@ body{
 /* Вертикальная панель инструментов */
 .toolbar {
     position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
+    left: 50%;
+    bottom: 10px;
+    transform: translateX(-50%);
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row; /* или column */
     align-items: center;
     padding: 6px;
     gap: 8px;
